[project]
name = "pdf-binner"
version = "0.1.0"
description = "Sorts PDF files into bins"
authors = [
    {name = "Luca Katsavos",email = "luca.katsavos@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
